--- a/src/GameDLL/GameDLL/GameDLL.vcxproj
+++ b/src/GameDLL/GameDLL/GameDLL.vcxproj
@@ -85,7 +85,7 @@
       <WarningLevel>Level3</WarningLevel>
       <PrecompiledHeader>
       </PrecompiledHeader>
-      <Optimization>Full</Optimization>
+      <Optimization>Disabled</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;_USRDLL;ATTRACTORSDLL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
