--- a/src/GameDLL/Makefile
+++ b/src/GameDLL/Makefile
@@ -19,7 +19,10 @@ DLL_CFLAGS = -O2 -std=c++0x -Wall -IGameDLL -I../../ext/CUDD/cudd-3.0.0/cudd -I.
 
 #DLL_LDFLAGS = -L../../ext/CUDD/cudd-3.0.0/cudd/.libs -L../../ext/CUDD/cudd-3.0.0/cplusplus/.libs -l:libcudd.a -l:libobj.a -shared -Wl,--subsystem,windows,--out-implib,lib/libgame.a
 
-DLL_LDFLAGS = -L../../ext/CUDD/cudd-3.0.0/cudd/.libs -L../../ext/CUDD/cudd-3.0.0/cplusplus/.libs -l:libobj.a -l:libcudd.a -shared -Wl,--subsystem,windows
+# below worked
+#DLL_LDFLAGS = -L../../ext/CUDD/cudd-3.0.0/cudd/.libs -L../../ext/CUDD/cudd-3.0.0/cplusplus/.libs -l:libobj.a -l:libcudd.a -shared -Wl,--subsystem,windows
+
+DLL_LDFLAGS = -static -static-libgcc -static-libstdc++ -L../../ext/CUDD/cudd-3.0.0/cudd/.libs -L../../ext/CUDD/cudd-3.0.0/cplusplus/.libs -l:libobj.a -l:libcudd.a -shared -Wl,--subsystem,windows
 
 .PHONY: all clean
 
